[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
prime-factor = "0.4.5"
regex = "1.10.2"
threadpool = "1.8.1"
tracing = "0.1.40"
